Environment include statements deleted

--- a/GymTracker/Views/Shared/_Layout.cshtml
+++ b/GymTracker/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <title>@ViewData["Title"] - GymTracker</title>
 
 
-    <environment include="Development">
+    <environment>
         <!-- Bootstrap -->
         <link href="~/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
         <!-- Font Awesome -->
@@ -151,7 +151,7 @@
         </div>
     </div>
 
-    <environment include="Development">
+    <environment>
         <script src="~/js/site.js" asp-append-version="true"></script>
         <!-- jQuery -->
         <script src="~/bower_components/jquery/dist/jquery.min.js"></script>
