--- a/GymTracker/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/GymTracker/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="~/images/logo.png" type="image/ico" />
     <title> GymTracker Forgot Password Confirmation </title>
-    <environment include="Development">
+    <environment>
         <!--===============================================================================================-->
         <link rel="stylesheet" type="text/css" href="~/login/vendor/bootstrap/css/bootstrap.min.css">
         <!--===============================================================================================-->
