Trainee detail page modals implemented. Form submits finished.

--- a/GymTracker/Views/Home/NewTrainee.cshtml
+++ b/GymTracker/Views/Home/NewTrainee.cshtml
@@ -41,17 +41,8 @@
                     Password <span class="required">*</span>
                 </label>
                 <div class="col-md-6 col-sm-6 col-xs-12">
-                    <input type="password" id="password" name="password" required="required" asp-for="Password" class="form-control col-md-7 col-xs-12">
+                    <input type="text" id="password" name="password" required="required" asp-for="Password" class="form-control col-md-7 col-xs-12">
                     <span asp-validation-for="Password" class="focus-input100" data-placeholder="Password"></span>
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="control-label col-md-3 col-sm-3 col-xs-12" asp-for="ConfirmPassword">
-                    Confirm Password <span class="required">*</span>
-                </label>
-                <div class="col-md-6 col-sm-6 col-xs-12">
-                    <input type="password" id="confirmpassword" name="confirmpassword" required="required" asp-for="ConfirmPassword" class="form-control col-md-7 col-xs-12">
-                    <span asp-validation-for="ConfirmPassword" class="focus-input100" data-placeholder="Confirm Password"></span>
                 </div>
             </div>
             <div class="form-group">
