--- a/GymTracker/Views/Shared/_Layout.cshtml
+++ b/GymTracker/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
                     <!-- menu profile quick info -->
                     <div class="profile clearfix">
                         <div class="profile_pic">
-                            <img src="~/images/img.jpg" alt="..." class="img-circle profile_img">
+                            <img src="~/images/user.png" alt="User Profile Picture" class="img-circle profile_img">
                         </div>
                         <div class="profile_info">
                             <span>Welcome,</span>
@@ -101,7 +101,7 @@
                         <ul class="nav navbar-nav navbar-right">
                             <li class="">
                                 <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                                    <img src="~/images/img.jpg" alt="">@User.Identity.Name
+                                    <img src="~/images/user.png" alt="">@User.Identity.Name
                                     <span class=" fa fa-angle-down"></span>
                                 </a>
                                 <ul class="dropdown-menu dropdown-usermenu pull-right">
@@ -188,6 +188,12 @@
             });
             $('#myDatepicker6').datetimepicker({
                 format: 'DD.MM.YYYY hh:mm a'
+            });
+            $('#myDatepicker7').datetimepicker({
+                format: 'DD.MM.YYYY'
+            });
+            $('#myDatepicker8').datetimepicker({
+                format: 'DD.MM.YYYY'
             });
         </script>
         <script src="~/js/jquery.inputmask/dist/min/jquery.inputmask.bundle.min.js"></script>
