User profile management functions implemented. Gym profile management and trainer info management are done

--- a/GymTracker/Views/Home/EditTrainee.cshtml
+++ b/GymTracker/Views/Home/EditTrainee.cshtml
@@ -54,7 +54,7 @@
                     Image
                 </label>
                 <div class="col-md-6 col-sm-6 col-xs-12">
-                    <img id="preview" style="height:100px;" src="~/../@Model.CurrentImage" alt="ProfileImage" />
+                    <img id="preview" style="height:100px;" src="@Model.CurrentImage" alt="ProfileImage" />
                     <input type="file" accept="image/*" id="image" asp-for="Image" class="form-control col-md-7 col-xs-12">
                 </div>
             </div>
