--- a/GymTracker/Views/Manage/GymProfile.cshtml
+++ b/GymTracker/Views/Manage/GymProfile.cshtml
@@ -7,7 +7,7 @@
 <h4>@ViewData["Title"]</h4>
 <div class="row">
     <div class="col-md-6">
-        <form method="post">
+        <form method="post" asp-controller="Manage" asp-action="UpdateGym">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name">Gym Name</label>
