--- a/GymTracker/Views/Shared/_Layout.cshtml
+++ b/GymTracker/Views/Shared/_Layout.cshtml
@@ -150,6 +150,7 @@
             $('.modal').on('hidden.bs.modal', function () {
                 $(this).find('input').val(null);
                 $(this).find('textarea').val(null);
+                $(this).find('img').attr("src", "~/images/user.png");
             });
         </script>
         <!-- FastClick -->
