Shared layout user image and name showing handled. JS console logs commented out

--- a/GymTracker/Views/Home/TraineeDetails.cshtml
+++ b/GymTracker/Views/Home/TraineeDetails.cshtml
@@ -882,7 +882,7 @@
     }
 
     function GetPicture(exerciseId) {
-        console.log(exerciseId);
+        //console.log(exerciseId);
         var myModal = $("#ShowGifModal");
         $.ajax({
             url: '@Url.Action("GetExerciseGif", "Home")',
