--- a/GymTracker/Views/Home/Exercises.cshtml
+++ b/GymTracker/Views/Home/Exercises.cshtml
@@ -10,8 +10,8 @@
     </div>
     <div class="x_content">
         @*<p class="text-muted font-13 m-b-30">
-                Responsive is a extension for DataTables that resolves that problem by optimising the table's layout for different screen sizes through the dynamic insertion and removal of columns from the table.
-            </p>*@
+            Responsive is a extension for DataTables that resolves that problem by optimising the table's layout for different screen sizes through the dynamic insertion and removal of columns from the table.
+        </p>*@
         <h6 class="pull-right">The calories per set values are calculated for 15 minutes durations.</h6>
         <table id="datatable-fixed-header" class="table table-striped table-bordered">
             <thead>
@@ -25,15 +25,15 @@
             </thead>
             <tbody>
                 @foreach (var ex in Model.Exercises)
-                {
-                    <tr>
-                        <td class="exerciseId" hidden>@ex.ExerciseId</td>
-                        <td><button class="btn btn-rounded btn-outline-light" onclick="GetPicture(this)">Show Gif</button></td>
-                        <td class="exerciseName">@ex.Name</td>
-                        <td>@ex.Category</td>
-                        <td>@ex.CalorieBySet</td>
-                    </tr>
-                }
+            {
+                <tr>
+                    <td class="exerciseId" hidden>@ex.ExerciseId</td>
+                    <td><button class="btn btn-rounded btn-outline-light" onclick="GetPicture(this)">Show Gif</button></td>
+                    <td class="exerciseName">@ex.Name</td>
+                    <td>@ex.Category</td>
+                    <td>@ex.CalorieBySet</td>
+                </tr>
+        }
             </tbody>
         </table>
     </div>
@@ -100,8 +100,9 @@
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                 <center style="font-size:larger; font-style:oblique" id="ExerciseName"></center>
             </div>
-            <div class="modal-body" style="position: relative; overflow-y: auto; padding: 15px;">
-                <div id="testmodal" style="padding: 5px 20px;">
+            <div class="modal-body" style="position: relative; overflow-y: auto;">
+                <div id="testmodal" style="margin: 5px 0px 5px 20px; align-content:center;">
+                    <label class="loader" id="loadingGif"></label>
                     <img id="ItemPreview" src="" />
                 </div>
             </div>
@@ -111,8 +112,10 @@
 
 <script>
     function GetPicture(elem) {
+        document.getElementById("loadingGif").classList.add('loader');
         var exerciseId = $(elem).closest("tr").find("td.exerciseId").html();
         var exerciseName = $(elem).closest("tr").find("td.exerciseName").html();
+        console.log(exerciseId);
         document.getElementById("ExerciseName").innerHTML = exerciseName;
         var myModal = $("#ShowGifModal");
         $.ajax({
@@ -122,7 +125,8 @@
                 exerciseId: exerciseId
             },
             cache: false,
-            success: function(result) {
+            success: function (result) {
+                document.getElementById("loadingGif").classList.remove('loader');
                 document.getElementById("ItemPreview").src = "data:image/png;base64," + result;
             }
         });
