--- a/GymTracker/Views/Home/TraineeDetails.cshtml
+++ b/GymTracker/Views/Home/TraineeDetails.cshtml
@@ -300,7 +300,7 @@
                                                     <tr>
                                                         <td class="editRoutineId" hidden>"@ex.RoutineId"</td>
                                                         <td class="editExId" hidden>"@ex.ExerciseId"</td>
-                                                        <td><button class="btn btn-rounded btn-outline-light" onclick="GetPicture(@ex.ExerciseId)">Show Gif</button></td>
+                                                        <td><button class="btn btn-rounded btn-outline-light" onclick="GetPicture(this)">Show Gif</button></td>
                                                         <td class="editExName">@ex.Exercise.Name</td>
                                                         <td class="editExCategory">@ex.Exercise.Category</td>
                                                         <td class="editExSet">@ex.Sets</td>
@@ -341,7 +341,7 @@
                                                     <tr>
                                                         <td class="editRoutineId" hidden>"@ex.RoutineId"</td>
                                                         <td class="editExId" hidden>"@ex.ExerciseId"</td>
-                                                        <td><button class="btn btn-rounded btn-outline-light" onclick="GetPicture(@ex.ExerciseId)">Show Gif</button></td>
+                                                        <td><button class="btn btn-rounded btn-outline-light" onclick="GetPicture(this)">Show Gif</button></td>
                                                         <td class="editExName">@ex.Exercise.Name</td>
                                                         <td class="editExCategory">@ex.Exercise.Category</td>
                                                         <td class="editExSet">@ex.Sets</td>
@@ -376,7 +376,7 @@
                                             {
                                                 <tr>
                                                     <td class="exerId" hidden>@ex.ExerciseId</td>
-                                                    <td><button class="btn btn-rounded btn-outline-light" onclick="GetPicture(@ex.ExerciseId)">Show Gif</button></td>
+                                                    <td><button class="btn btn-rounded btn-outline-light" onclick="GetPicture2(this)">Show Gif</button></td>
                                                     <td class="exerciseName">@ex.Name</td>
                                                     <td class="exerciseCategory">@ex.Category</td>
                                                     <td><button class="open-AssignExercise btn btn-success pull-right" onclick="ModalFill(this)">Assign</button></td>
@@ -680,10 +680,11 @@
         <div class="modal-content" style="position: relative; overflow-y: auto; max-width: 500px;">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h4 class="modal-title" id="myModalLabel">Exercise Gif</h4>
+                <center style="font-size:larger; font-style:oblique" id="ExerciseName"></center>
             </div>
-            <div class="modal-body" style="position: relative; overflow-y: auto; padding: 15px;">
-                <div id="testmodal" style="padding: 5px 20px;">
+            <div class="modal-body" style="position: relative; overflow-y: auto;">
+                <div id="testmodal" style="margin: 5px 0px 5px 20px; align-content:center;">
+                    <label class="loader" id="loadingGif"></label>
                     <img id="ItemPreview" src="" />
                 </div>
             </div>
@@ -881,8 +882,13 @@
 
     }
 
-    function GetPicture(exerciseId) {
+    function GetPicture(elem) {
+        document.getElementById("loadingGif").classList.add('loader');
+        var exerciseId = $(elem).closest("tr").find("td.editExId").html().slice(1, -1);;
+        var exerciseName = $(elem).closest("tr").find("td.editExName").html();
         //console.log(exerciseId);
+        //console.log(exerciseName);
+        document.getElementById("ExerciseName").innerHTML = exerciseName;
         var myModal = $("#ShowGifModal");
         $.ajax({
             url: '@Url.Action("GetExerciseGif", "Home")',
@@ -891,7 +897,30 @@
                 exerciseId: exerciseId
             },
             cache: false,
-            success: function(result) {
+            success: function (result) {
+                document.getElementById("loadingGif").classList.remove('loader');
+                document.getElementById("ItemPreview").src = "data:image/png;base64," + result;
+            }
+        });
+        myModal.modal('show');
+    }
+    function GetPicture2(elem) {
+        document.getElementById("loadingGif").classList.add('loader');
+        var exerciseId = $(elem).closest("tr").find("td.exerId").html();
+        var exerciseName = $(elem).closest("tr").find("td.exerciseName").html();
+        //console.log(exerciseId);
+        //console.log(exerciseName);
+        document.getElementById("ExerciseName").innerHTML = exerciseName;
+        var myModal = $("#ShowGifModal");
+        $.ajax({
+            url: '@Url.Action("GetExerciseGif", "Home")',
+            type: 'GET',
+            data: {
+                exerciseId: exerciseId
+            },
+            cache: false,
+            success: function (result) {
+                document.getElementById("loadingGif").classList.remove('loader');
                 document.getElementById("ItemPreview").src = "data:image/png;base64," + result;
             }
         });
