--- a/GymTracker/Views/Home/Index.cshtml
+++ b/GymTracker/Views/Home/Index.cshtml
@@ -70,6 +70,21 @@
                                 </div>
                             </div>
                         </div>
+                        @*<div class="form-group">
+                            <label class="control-label col-md-3 col-sm-3 col-xs-12" asp-for="StrEndDate">
+                                Trainee Invitation
+                            </label>
+                            <div class="col-md-6 col-sm-6 col-xs-12">
+                                @{ 
+                                    foreach (var trainee in Model.TraineeList)
+                                    {
+                                        <input asp-for="">
+
+                                    }
+                                }
+                            </div>
+                        </div>*@
+
                         <div class="modal-footer">
                             <button type="button" class="btn btn-info antoclose2" data-dismiss="modal">Close</button>
                             <button type="submit" class="btn btn-primary antosubmit2">Save changes</button>
