--- a/GymTracker/Views/Home/EditTrainee.cshtml
+++ b/GymTracker/Views/Home/EditTrainee.cshtml
@@ -37,12 +37,12 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="control-label col-md-3 col-sm-3 col-xs-12" asp-for="DateOfBirth">
+                <label class="control-label col-md-3 col-sm-3 col-xs-12" asp-for="StrDateOfBirth">
                     Date Of Birth <span class="required">*</span>
                 </label>
                 <div class="col-md-6 col-sm-6 col-xs-12">
                     <div class='input-group date' id='myDatepicker2'>
-                        <input id="birthday" type="text" asp-for="DateOfBirth" class="form-control" value="@Model.DateOfBirth" data-inputmask="'mask': '99.99.9999'" placeholder="DD.MM.YYYY" required="required" />
+                        <input id="birthday" type="text" asp-for="StrDateOfBirth" class="form-control" value="@Model.DateOfBirth" data-inputmask="'mask': '99/99/9999'" placeholder="DD/MM/YYYY" required="required" />
                         <span class="input-group-addon">
                             <span class="glyphicon glyphicon-calendar"></span>
                         </span>
